feat: 전시회 상세조회 페이지 구현(2.8)

--- a/assets/css/templatemo.css
+++ b/assets/css/templatemo.css
@@ -73,6 +73,28 @@ p, a {font-weight: 400;}
 #index_banner .carousel-indicators.active {
   background-color: #6266ea !important;
 }
+
+#div_root{
+  display: flex;
+  margin:auto;
+  width:auto;
+}
+
+#div_img{
+  width:50%;
+  height:auto;
+  float:left;
+  background: color #878787;
+  text-align:left;
+}
+
+#div_spec{
+  width:50%;
+  height:auto;
+  float:left;
+  background-color:#819FF7;
+}
+
 .service-wrapper .service-footer {
   max-width: 720px;
 }
